--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "eslint": "^9.22.0",
     "typescript": "5.6.3",
     "vite": "^5.1.4"
   }
